Fix broken style of comment info

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -286,6 +286,8 @@ input.radioBox_colored {
     border-bottom: 2px dotted #0F5270;
     border-radius: 0px 0px 0px 4px;
 	visibility: hidden;
+	top: -8px;
+	padding-bottom: 2px;
 }
 tr.commentOwner div.commentInfo span.commentEditBtn {
 	visibility: visible !important;
@@ -297,7 +299,6 @@ tr.commentOwner div.commentInfo span.commentEditBtn {
 td.commentInfo {
 	position: relative;
 	margin-top: 0;
-    float: left;
     width: 150px !important;
     background-color: #aeadad;
     border-radius: 8px;
